# operaton-cockpit-jupyterlite

./: .gitignore  AGENTS.md  Makefile  README.md  devenv.nix  devenv.yaml  jupyter-lite.json  jupyter_lite_config.json  package.json  pyproject.toml  tsconfig.route.json  webpack.route.config.js
files/: Audit_Authorizations.ipynb  Audit_Variable_Events.ipynb  Create_Deployment.ipynb  Migrate_Process_Instances.ipynb  Restart_Process_Instance.ipynb  Retry_Incidents.ipynb  bpmn_moddle.py  dmn_moddle.py  operaton.py  test-bpmn-moddle.ipynb
files/examples/: bpmn-differ.ipynb  bpmn-moddle.ipynb  dmn-moddle.ipynb  operaton-api.ipynb
src/: jupyter-lite-route.ts
